--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,11 @@
         "php": ">=5.3.0",
         "illuminate/support": "4.0.x"
     },
+    "require-dev": {
+        "mockery/mockery": "0.7.2",
+        "illuminate/view": "dev-master"
+    },
     "autoload": {
-        "classmap": [
-            "src/migrations"
-        ],
         "psr-0": {
             "BigElephant\\Presenter": "src/"
         }
